<resources>
    <string name="app_name">Chat Patito S.A.</string>
    <string name="nombre_de_usuario">Nombre de Usuario:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="patito_s_a">Patito S.A.</string>
    <string name="login">Login</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="correo_electronico">Correo Electronico:</string>
    <string name="confrime_contrase_a">Confrime Contraseña:</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="nombreusuario">NombreUsuario</string>
    <string name="ultimomensaje">UltimoMensaje</string>
    <string name="borrar">Borrar</string>
    <string name="send">SEND</string>
    <string name="update">Update</string>
    <string name="enter_message">Enter message</string>
    <string name="detalles">Detalles</string>
</resources>
