<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/txtNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="text|textPersonName" />

        <EditText
            android:id="@+id/txtContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="315dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/labelGrafico1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="190dp"
            android:text="@string/nombre_de_usuario"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/labelGrafico2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="290dp"
            android:text="@string/contrase_a"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/patito" />

        <TextView
            android:id="@+id/labelGrafico3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_centerHorizontal="true"
            android:text="@string/patito_s_a"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnLogin"
            style="@android:style/Widget.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="530dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnNuevoUsuario"
            style="@android:style/Widget.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="530dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/nuevo_usuario"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</ScrollView>