<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        tools:context=".NuevoUsuario">

        <EditText
            android:id="@+id/txtContraseña2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="510dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/labelContraseña2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="480dp"
            android:text="@string/confrime_contrase_a"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/labelContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="390dp"
            android:text="@string/contrase_a"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/labelUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="300dp"
            android:text="@string/nombre_de_usuario"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="240dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/labelCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="210dp"
            android:text="@string/correo_electronico"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/labelApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:text="@string/apellido"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/labelNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/nombre"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnCrear"
            style="@android:style/Widget.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="580dp"
            android:background="@color/colorPrimary"
            android:text="@string/crear_usuario"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</ScrollView>